# lets-auth

./: .gitignore  Cargo.toml  FASTN.ftd  README.md  default-0BF416325397F01F572831F9315E0888DF01F2FEC77165F3EE7EA2D4AE5F5E8A.js  default-62F988659CDBF8CD190C2B05E7FD0963F7192A284AB347A5E82F37B67FE1FB39.js  default-E34789A015242911FB97A5B41D10643FDEC118903A500752CBAB7CD478842FE2.js  default-FAB8824D2CE1D1D75BBA396EC18B002A4E673BF59B4BAC40A96B0B5F8AD4C6CF.js  flake.nix  index.ftd  index.html  manifest.json
-/fastn-community.github.io/auth/ft-email-auth-provider/: Cargo.toml  ft_email_auth_provider.wasm
-/fastn-community.github.io/auth/ft-email-auth-provider/src/: layout.rs  lib.rs  route.rs
-/fastn-community.github.io/auth/ft-email-auth-provider/src/handlers/: create_account.rs  login.rs  mod.rs
-/fastn-community.github.io/auth/scripts/: auto.sh
.fastn/: config.json
.github/: RELEASE_TEMPLATE.md
.github/workflows/: app-to-ft.yml  release.yml  system-to-ft.yml  template-to-ft.yml  www-to-ft.yml
FASTN/: ds.ftd
FASTN/ds/: index.html
app/: FASTN.ftd
app/.packages/lets-auth-system.fifthtry.site/: FASTN.ftd  auth-page.ftd  forgot-password.ftd  index.ftd  reset-password.ftd  signin.ftd  signup.ftd
app/.packages/lets-auth-system.fifthtry.site/actions/: alert.js  create-account.ftd  forgot-password.ftd  set-password.ftd  signin.ftd
app/.packages/lets-auth-system.fifthtry.site/storybook/: forgot-password.ftd  index.ftd  signin.ftd  signup.ftd
auth/: Cargo.toml
auth/src/: layout.rs  lib.rs  rng.rs  route.rs  urls.rs  utils.rs  validator.rs
auth/src/handlers/: create_account.rs  login.rs  mod.rs
backend/: Cargo.toml
backend/src/: lib.rs
backend/src/handlers/: confirm_email.rs  create_account.rs  forgot_password.rs  login.rs  mod.rs  resend_confirmation_email.rs  set_password.rs
common/: Cargo.toml
common/src/: lib.rs
email-auth-provider/: Cargo.toml
email-auth-provider/src/: lib.rs
email-auth-provider/src/handlers/: confirm_email.rs  create_account.rs  forgot_password.rs  login.rs  mod.rs  resend_confirmation_email.rs  set_password.rs  utils.rs
ft-email-auth-provider/: Cargo.toml  ft_email_auth_provider.wasm
ft-email-auth-provider/src/: create_account.rs  create_verified_account.rs  layout.rs  lib.rs  login.rs  logout.rs  route.rs  test.rs  urls.rs  utils.rs
ft-email-auth-provider/src/handlers/: confirm_email.rs  create_account.rs  create_verified_account.rs  login.rs  mod.rs  resend_confirmation_email.rs  user_data_by_code.rs
lets-auth-system.fifthtry.site/: index.ftd  signin.ftd
lets-auth-template.fifthtry.site/: FASTN.ftd  index.ftd  lets-auth.ftd  only-logged-in.ftd
lets-auth-template.fifthtry.site/.packages/: lets-auth-system.fifthtry.site  lets-auth.fifthtry.site
lets-auth.fifthtry-community.com/: FASTN.ftd  index.ftd
lets-auth.fifthtry-community.com/design/: permissions.ftd
lets-auth.fifthtry.site/: FASTN.ftd  config.ftd  forgot-password-success.ftd  forgot-password.ftd  index.ftd  set-password.ftd  signin.ftd  signup.ftd
lets-auth.fifthtry.site/actions/: create-account.ftd  forgot-password.ftd  set-password.ftd  signin.ftd  signup.ftd
lets-auth.fifthtry.site/actions/dummy/: create-account.ftd  forgot-password.ftd  set-password.ftd  signin.ftd
lets-auth.fifthtry.site/mails/: create-account-confirmation.ftd  index.ftd  reset-password.ftd
lets-auth.fifthtry.site/storybook/: index.ftd  reset-password.ftd
lets-auth.fifthtry.site/ui/: auth-page.ftd  forgot-password-success.ftd  forgot-password.ftd  reset-password.ftd  set-password.ftd  signin.ftd  signup.ftd
mobile-auth-provider/: Cargo.toml
mobile-auth-provider/src/: lib.rs
mobile-auth-provider/src/handlers/: create_account.rs
pages/: email-confirmation-request-sent.ftd  onboarding.ftd
pages/onboarding/: index.html
scripts/: auto.sh  build-wasm.sh  optimise-wasm.sh  publish-app.sh
sdk/: Cargo.toml
sdk/src/: all_folders.rs  config.rs  denormalized_folders.rs  folder.rs  lib.rs  schema.rs
sidebar/: index.html
template/: FASTN.ftd  foo.ftd  index.ftd
template/.packages/foo.com/: index.ftd
wasm/: Cargo.toml
www/: FASTN.ftd
