[package]
name = "ft_email_auth_provider"
version = "0.1.0"
edition = "2021"
description = "Email auth provider"

[lib]
crate-type = ["cdylib"]

[features]
default = ["username", "ft-sdk/sqlite-default"]
username = []
test = ["diesel/sqlite", "diesel/postgres", "ft-sdk/test"]

[dependencies]
serde = {  version = "1", features = ["derive"] }
serde_json = "1"
http = "1"
bytes = "1"
diesel = { version = ">=2, <2.2", default-features = false, features = ["chrono"] }
thiserror = "1"
argon2 = "0.5"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
validator = "0.18"
cookie = "0.18"


[dependencies.ft-sdk]
version = "0.1.11"
path = "../../ft-sdk/ft-sdk"
default-features = false
features = ["auth-provider", "field-extractors"]
