[package]
name = "mobile_auth_provider"
version = "0.1.1"
edition.workspace = true
description = "Mobile auth provider"

[lib]
crate-type = ["cdylib"]

[features]
default = ["username"]
username = []


[dependencies]
serde.workspace = true
serde_json.workspace = true
http.workspace = true
bytes.workspace = true
diesel.workspace = true
thiserror.workspace = true
argon2.workspace = true
chrono.workspace = true
validator.workspace = true
cookie.workspace = true
ft-sdk.workspace = true
regex.workspace = true
common.workspace = true
